--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -136,7 +136,7 @@
                                     </a>
                                     <p>
                                         这一次的节点更新覆盖了美国、香港、新加坡、韩国、日本、加拿大、欧洲等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                    </p>
-                                </div>
+                                </div></div>
 							      <div class="row item xcblog-blog-item" data-date="2025-01-29">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-1-29-free-high-speed-nodes.htm" class="xcblog-blog-url">
@@ -149,7 +149,7 @@
                                     </a>
                                     <p>
                                         这一次的节点更新覆盖了美国、香港、新加坡、韩国、日本、加拿大、欧洲等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                    </p>
-                                </div>
+                                </div></div>
 							      <div class="row item xcblog-blog-item" data-date="2025-01-28">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-1-28-free-high-speed-nodes.htm" class="xcblog-blog-url">
