--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                     </div>
                                     <!-- layer 1 -->
                                     <div class="layer-1">
-                                        <h4 class="title-1">需要翻墙者自己将订阅链接导入到 Clash/V2ray 软件中使用，Windows、Mac、Android 的 Clash/V2ray 均为免费软件</h4>
+                                        <h4 class="title-1">翻墙需自行添加订阅链接至Clash/V2ray软件中使用，Windows、Mac、Android版的Clash/V2ray均为免费软件。</h4>
                                     </div>
                                 </div>
                             </div>
@@ -130,7 +130,21 @@
                     <div class="col-md-9">
                         <h2>最近更新文章</h2>
                         <div class="xcblog-blog-list">
-											
+																			
+							      <div class="row item xcblog-blog-item" data-date="2025-02-01">
+                                <div class="col-md-3">
+                                    <a href="/free-nodes/2025-2-1-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <img src="/uploads/20250105/photo_2023-10-18_15-35-31.jpg" class="img-fluid" alt="2月1日→20.5M/S|2025年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">
+                                    </a>
+                                </div>
+                                <div class="col-md-9">
+                                    <a href="/free-nodes/2025-2-1-high-speed-nodes.htm" class="xcblog-blog-url">
+                                        <h3 class="xcblog-blog-title">2月1日→20.5M/S|2025年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</h3>
+                                    </a>
+                                    <p>
+                                        这一次的节点更新覆盖了美国、香港、新加坡、韩国、日本、加拿大、欧洲等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                    </p>
+                                </div>
+			  </div>			
 							      <div class="row item xcblog-blog-item" data-date="2025-01-31">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-1-31-high-speed-nodes.htm" class="xcblog-blog-url">
