--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
                                     <p>
                                         这一次的节点更新覆盖了美国、香港、新加坡、韩国、日本、加拿大、欧洲等地区,最高速度可达17.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                    </p>
                                 </div>
+				  </div>	  
 				  <div class="row item xcblog-blog-item" data-date="2025-03-21">
                                 <div class="col-md-3">
                                     <a href="/free-nodes/2025-3-21-high-speed-nodes.htm" class="xcblog-blog-url">
