--- a/free-nodes/2025-4-19-high-speed-nodes.htm
+++ b/free-nodes/2025-4-19-high-speed-nodes.htm
@@ -117,9 +117,9 @@
 <p>网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.dginv.click/#/register?code=" data-type="Gougou" data-code="O3l5SX1q" rel="nofollow noopener" style="color:red">狗狗加速（点击注册）</a>】<br></p>
 
 
-<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><h3>高速机场推荐2【<a href="javascript:;" class="js_to" data-url="https://kkjiasu.top/#/register?code=" data-type="KK加速" data-code="lhGhQflc" rel="nofollow noopener" style="color:red;">KK加速</a>】</h3><p>无视高峰，<font color="#ff0000">不限制设备数量</font>，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
+<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><h3>高速机场推荐2【<a href="javascript:;" class="js_to" data-url="https://sulian.info/#/register?code=" data-type="KK加速" data-code="3R5DYYrL" rel="nofollow noopener" style="color:red;">KK加速</a>】</h3><p>无视高峰，<font color="#ff0000">不限制设备数量</font>，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
 
-<p>网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://kkjiasu.top/#/register?code=" data-type="KK加速" data-code="lhGhQflc" rel="nofollow noopener"><font color="#ff0000">KK加速（点击注册）</font></a>】</p>
+<p>网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://sulian.info/#/register?code=" data-type="KK加速" data-code="3R5DYYrL" rel="nofollow noopener"><font color="#ff0000">KK加速（点击注册）</font></a>】</p>
 
 <p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><h3>高速机场推荐3【<a href="javascript:;" class="js_to" data-url="https://goudan.site/#/register?code=" data-type="西游云" data-code="LQzUg4EU" rel="nofollow noopener" style="color:red;">西游云</a>】</h3><p>无视高峰，<font color="#ff0000">不限制设备数量</font>，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
 
