--- a/free-nodes/2025-6-20-high-speed-nodes.htm
+++ b/free-nodes/2025-6-20-high-speed-nodes.htm
@@ -111,6 +111,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-9">
+					
+					关注<span style="color: #ff0000;"><a style="color: #ff0000;" href="https://t.me/clashjd">「TG频道</a>」</span>可第一时间获得节点更新消息，还可解锁神秘高速节点！
+					
 					<span style="font-size: 18pt;"><strong><span style="color: #ff0000;">本站推荐机场以最新日期为准！！！往期推荐可能有过期，失联，倒闭和跑路风险！！！</span></strong></span>
                                         <input type="hidden" id="share-website-info" data-name="Clash Node官网订阅站" data-url="https://www.nodeshare.xyz">
                 <p>此次更新涵盖美国、香港、新加坡、韩国、日本、加拿大、欧洲等多个地区，节点遍布广袤领域，极致速度高达15.4 M/S。无论身处何方，您皆能畅享更快速、更稳定的网络连接。新节点的加入不仅拓展了网络覆盖范围，还让您轻松拨开全球网络的迷雾，尽情畅游信息海洋。无论是日本的动漫、美国的影视，抑或欧洲的新闻，皆可一应俱全。只需复制以下v2ray/Clash订阅链接，导入您的客户端，即刻领略新节点带来的乐享体验。此次更新旨在赋予您更畅快、更惬意的网络之旅，尽情享受高速流畅的网络畅通。随着全球互联网的蓬勃发展，网络早已成为我们生活中不可或缺的一环，而此次更新正是为了让您更好地融入这个数字化网络世界。</p>
